--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ fieldset label span:hover {
   color: #6c6a71;
 }
 
-.input-wrapper input, .input-wrapper textarea {
+.input-wrapper input, .input-wrapper textarea, .input-wrapper select {
   width: 100%;
   background: #FAFAFC;
   height: 56px;
@@ -120,4 +120,12 @@ fieldset label span:hover {
 .input-wrapper textarea {
   margin: 0;
   height: 168px;
+}
+
+.input-wrapper select{
+  appearance: none;
+  -webkit-appearance: none;
+  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 10L12 14L16 10' stroke='%239C98A6' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+  background-repeat: no-repeat;
+  background-position: right 24px top 50%;
 }
