--- a/style.css
+++ b/style.css
@@ -4,34 +4,11 @@
   box-sizing: border-box;
 }
 
-h1{
-  font-family: 'Archivo', sans-serif;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 42px;
-  color: #FFFFFF;
-  margin-bottom: 24px;
-}
-.page{
-  width: 736px;
-  margin: auto;
-}
-header{
-  width: 319px;
-  margin-top: 80px;
-  margin-bottom: 42px;
-
-}
-header p {
-  font-size: 16px;
-  line-height: 26px;
-  color:#42D3FF;
-}
-
-body, label{
+body, input, button, select, textarea {
   font-family: 'Poppins', sans-serif;
 }
-body{
+
+body {
   background: #E5E5E5;
 }
 
@@ -39,29 +16,64 @@ body::before {
   content: '';
   width: 100%;
   height: 368px;
+
   position: absolute;
-  background: #121214;
-  left: 0;
   top: 0;
+  left: 0;
   z-index: -1;
+  background: #121214;
 }
-form {
-  background: #FAFAFC;
+
+.page {
   width: 736px;
   margin: auto;
-  border-radius: 8px 8px 0px 0px;
+}
+
+header {
+  width: 319px;
+
+  margin-top: 74px;
+}
+
+header h1 {
+  font-family: 'Archivo', sans-serif;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 42px;
+  color: white;
+
+  margin-bottom: 24px;
+}
+
+header p {
+  font-size: 16px;
+  line-height: 26px;
+
+  color: #42D3FF;
+}
+
+form {
+  margin-top: 38px;
+  background: #FAFAFC;
+  border-radius: 8px;
+  min-height: 300px;
+
   padding: 64px;
 
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
 }
-fieldset{
+
+fieldset {
   border: none;
 }
+
 .fieldset-wrapper {
   display: flex;
   flex-direction: column;
-  gap:24px;
+  gap: 24px;
 }
-
 
 fieldset legend {
   font-family: 'Archivo', sans-serif;
@@ -69,11 +81,10 @@ fieldset legend {
   font-size: 24px;
   line-height: 34px;
 
-  color: #32264D;
   width: 100%;
+
   border-bottom: 1px solid #E6E6F0;
   padding-bottom: 16px;
-
 }
 
 .input-wrapper {
@@ -81,51 +92,65 @@ fieldset legend {
   flex-direction: column;
 }
 
-fieldset label {
+.input-wrapper label {
   font-size: 14px;
   line-height: 24px;
+
   color: #4E4958;
+
+  margin-bottom: 8px;
 }
 
-fieldset label span {
+.input-wrapper label span {
   margin-left: 12px;
+
   font-size: 12px;
   line-height: 20px;
-  color: #bfbbc9;
-
+  
+  color: #a9a7af;
 }
-fieldset label span:hover {
+
+.input-wrapper label span:hover {
   color: #6c6a71;
 }
 
-.input-wrapper input, .input-wrapper textarea, .input-wrapper select {
-  width: 100%;
+.input-wrapper input, 
+.input-wrapper textarea,
+.input-wrapper select {
   background: #FAFAFC;
+
+  border: 1px solid #E6E6F0;
+  border-radius: 8px;
+  
   height: 56px;
+
   padding: 0 24px;
 
   font-size: 16px;
   line-height: 26px;
 
-  border: 1px solid #E6E6F0;
-  border-radius: 8px;
-
-
-  margin-top: 8px;
-  margin-bottom: 24px;
-
   color: #6c6a71;
 }
 
 .input-wrapper textarea {
-  margin: 0;
+  padding: 0;
   height: 168px;
 }
 
-.input-wrapper select{
+.input-wrapper select {
   appearance: none;
   -webkit-appearance: none;
+
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 10L12 14L16 10' stroke='%239C98A6' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
   background-repeat: no-repeat;
   background-position: right 24px top 50%;
+}
+
+.col-3 {
+  display: flex;
+  gap: 20px;
+}
+
+.col-3 > div:nth-child(1) {
+  width: 100%;
 }
