--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-body, input, button, select, textarea {
+body, input, select, textarea {
   font-family: 'Poppins', sans-serif;
 }
 
@@ -55,7 +55,7 @@ header p {
 form {
   margin-top: 38px;
   background: #FAFAFC;
-  border-radius: 8px;
+  border-radius: 8px 8px 0 0;
   min-height: 300px;
 
   padding: 64px;
@@ -92,7 +92,13 @@ fieldset legend {
   flex-direction: column;
 }
 
-.input-wrapper label {
+.checkbox-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.input-wrapper label 
+.ckeckbox-wrapper label{
   font-size: 14px;
   line-height: 24px;
 
@@ -153,4 +159,72 @@ fieldset legend {
 
 .col-3 > div:nth-child(1) {
   width: 100%;
+}
+.checkbox-wrapper {
+  position: relative;
+}
+
+.checkbox-wrapper label{
+  margin: 0;
+  display: flex;
+  gap: 16px;
+}
+
+.checkbox-wrapper input{
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  opacity: 0;
+
+}
+
+.checkbox-wrapper label::before {
+  content: '';
+  width: 24px;
+  height: 24px;
+  border: 1px solid #E6E6F0;
+  border-radius: 8px;
+  display: block;
+}
+
+.checkbox-wrapper input:checked + label::before {
+  background-image: url("data:image/svg+xml,%3Csvg width='18' height='14' viewBox='0 0 18 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6 11.17L1.83 7L0.410004 8.41L6 14L18 2L16.59 0.589996L6 11.17Z' fill='%2342D3FF'/%3E%3C/svg%3E%0A");
+  background-repeat: no-repeat;
+  background-position: right 50% top 50%;
+}
+
+.checkbox-wrapper input:focus + label::before {
+  border: 2px solid black;
+}
+
+footer .buttons-wrapper {
+  width: 736px;
+  height: 136px;
+  display: flex;
+  flex-direction: column;
+  border-top: 1px solid #D6D6D6;
+  background-color: #F0F0F4;
+  border-radius: 0px 0px 8px 8px;
+  margin-bottom: 90px;
+  padding: 40px 64px;
+
+}
+
+.buttons-wrapper .button {
+  height: 56px;
+  background: #04D361;
+  border-radius: 8px;
+  border: none;
+
+  font-family: 'Archivo', sans-serif ;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 26px;
+  color: #FFFFFF;
+  
+}
+
+.buttons-wrapper .button:hover {
+  background: #0a9046;
+
 }
